# erp-api

./: .gitignore  Dockerfile  account.py  api.yaml  app.py  app.yaml  auth.py  customer.py  dev.sh  doc.py  hosting.py  identity.py  main.py  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: deploy.yml
app/: main.py
infra/: function.tf  main.tf
lib/: encoder.py  entity.py  repository.py
src/app/: accounts.py  customers.py  main.py  models.py  orders.py
static/: index.html
