[tool.poetry]
name = "erp-api"
version = "0.1.0"
description = ""
authors = ["Oleksandr Novachok <novachok@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.70.1"
google-cloud-firestore = "^2.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
